# mumudeploy

./: .gitignore  CMakeLists.txt  README.md  databasemanager.cpp  databasemanager.h  engine.cpp  engine.h  filehandle.cpp  filehandle.h  groups  main.cpp  project.config  tables.txt
controller/: databasemanager.cpp  databasemanager.h  engine.cpp  engine.h  filehandle.cpp  filehandle.h  mumufriend.cpp  mumufriend.h  mumuthread.cpp  mumuthread.h  mumuthreadreceive.cpp  mumuthreadreceive.h  mumuthreadsend.cpp  mumuthreadsend.h  qmlinterface.cpp  qmlinterface.h
docs/: doxydoc
network/: TODO  client.cpp  client.h  main.cpp  mumuconnection.cpp  mumuconnection.h  network.pro  networkinterface.h  networkmanager.h  server.cpp  server.h
network/client/: Makefile  client  client.cpp  client.pro  main.cpp  moc_mumuclient.cpp  mumuclient.cpp  mumuclient.h
network/commum/: .mumublock.h.swp  filedescriptor.cpp  filedescriptor.h  mumublock.cpp  mumublock.h  mumufile.cpp  mumufile.h  util.cpp  util.h
network/doc/: network.txt
network/server/: Makefile  main.cpp  moc_mumuconnection.cpp  moc_mumuserver.cpp  mumuconnection.cpp  mumuconnection.h  mumuserver.cpp  mumuserver.h  server  server.cpp  server.h  server.pro
qml/: Button.qml  FilesToSend.qml  Main.qml  Progressbar.qml
